# Space_Terminal

./: .gitignore  CMakeLists.txt  README.md  todo.txt
client/src/: App.js
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: page.js  page.tsx
include/: base_service.hpp  live_data_service.hpp  satellite_structs.hpp  streaming_service.hpp  utils.hpp
src/: config.py  main.cpp  server.py
src/models/: satellite.py
